--- a/caluator.html
+++ b/caluator.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-		<link rel="stylesheet" href="/css/calculator.css">
+		<link rel="stylesheet" href="css/calculator.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
-        <script src="../js/calculator.js"></script>
+        <script src="js/calculator.js"></script>
     </head>
     <body>
         <div id="calculator" class="calculator">
