--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
             <button id="allClear" class="allClear">AC</button>
             <button id="clear" class="clear">C</button>
-            <button id="clear" class="clear">+/-</button>
-            <button id="clear" class="clear">%</button>
+            <button class="num" data-num="change" >+/-</button>
+            <button class="num" data-num="percent">%</button>
 
             <button class="num" data-num="7">7</button>
             <button class="num" data-num="8">8</button>
@@ -41,7 +41,7 @@
             <button class="num" data-num="0">0</button>
             <button class="num" data-num=".">.</button>
             <button id="equals" class="equals" data-result="">=</button>
-            <button data-ops="divided by" class="ops">/</button>
+            <button data-ops="divided-by" class="ops">/</button>
         </div>
 
     </body>
